--- a/miniprogram/miniprogram/pages/detailAdvanced/detailAdvanced.wxss
+++ b/miniprogram/miniprogram/pages/detailAdvanced/detailAdvanced.wxss
@@ -58,7 +58,19 @@
   background: #FFE4BA;
   color: #FF8F1F;
 }
-
+.question-points{
+  background: #fff;
+  border-radius: 16px;
+  padding: 24px;
+  margin-bottom: 16px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  width: 100%;
+}
+.question-point{
+  margin-bottom: 14px;
+  font-size: 16px;
+  font-weight: 500;
+}
 /* 问题卡片样式 */
 .question-section {
   display: flex;
@@ -159,6 +171,10 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  font-size: 20px;
+  font-weight: 500;
+  text-align: justify;
+  line-height: 1.6;
 }
 
 .card-back {
