--- a/miniprogram/miniprogram/pages/detailAdvanced/detailAdvanced.wxss
+++ b/miniprogram/miniprogram/pages/detailAdvanced/detailAdvanced.wxss
@@ -59,12 +59,13 @@
   color: #FF8F1F;
 }
 .question-points{
+  width: 100%;
+  box-sizing: border-box;
   background: #fff;
   border-radius: 16px;
   padding: 24px;
   margin-bottom: 16px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-  width: 100%;
 }
 .question-point{
   margin-bottom: 14px;
@@ -73,34 +74,32 @@
 }
 /* 问题卡片样式 */
 .question-section {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  width: calc(100% - 48px);
 }
 
 /* state=0 的卡片样式 */
 .state0 .question-card {
   width: 100%;
+  box-sizing: border-box;
   padding: 14px 24px;
   background: #fff;
   border-radius: 16px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
   position: relative;
-  /* min-height: 300px; */
+  margin-bottom: 16px;
 }
 
-/* state=1和state=2的卡片样式 */
 .state1 .question-card {
   width: 100%;
+  box-sizing: border-box;
   padding: 24px;
   background: #fff;
   border-radius: 16px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
   position: relative;
-  min-height: 300px;
-  max-height: 320px;
-  overflow-y: auto;
+  height: 400px;
 }
 
 .question-title {
@@ -138,17 +137,26 @@
 }
 
 .ai-feedback {
+  width: 100%;
   background: #fff;
   border-radius: 16px;
-  padding: 5px;
+  display: flex;
+  justify-content: center;
 }
-
-.ai-feedback-content {
+.feedback-container{
+  width: calc(100% - 48px);
+  margin: 20px 0;
+  padding: 0 5px;
   background: #F8F9FC;
   border-radius: 16px;
-  padding: 10px 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.ai-feedback-content {
   color: #4E5969;
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: 500;
   line-height: 1.6;
   text-align: justify;
 }
@@ -175,17 +183,32 @@
   font-weight: 500;
   text-align: justify;
   line-height: 1.6;
+  overflow: auto;
 }
 
 .card-back {
   transform: rotateY(180deg);
+  display: flex;
+  flex-direction: column;
 }
-
+.card-front{
+  display: flex;
+  align-items: center;
+}
 .question-tip {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   font-size: 14px;
   color: #666;
-  margin-top: 8px;
   text-align: center;
+}
+.button-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .answer-content {
