--- a/miniprogram/miniprogram/pages/detailExpert/detailExpert.wxss
+++ b/miniprogram/miniprogram/pages/detailExpert/detailExpert.wxss
@@ -61,14 +61,15 @@
   
   /* 问题卡片样式 */
   .question-section {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 16px;
-    width: calc(100% - 48px);
   }
 
   /* state=0 的卡片样式 */
   .state0 .question-card {
+    box-sizing: border-box;
     width: 100%;
     padding: 24px;
     background: #fff;
@@ -78,17 +79,11 @@
     min-height: 300px;
   }
   
-  /* state=1和state=2的卡片样式 */
   .state1 .question-card {
     width: 100%;
-    padding: 24px;
-    background: #fff;
-    border-radius: 16px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-    position: relative;
-    min-height: 300px;
-    max-height: 320px;
-    overflow-y: auto;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
   }
 
   .question-title {
@@ -128,11 +123,13 @@
   .ai-feedback {
     background: #F8F9FC;
     border-radius: 16px;
-    padding: 5px;
+    display: flex;
+    justify-content: center;
   }
 
   .ai-feedback-content {
     font-size: 16px;
+    font-weight: 500;
     line-height: 1.6;
     color: #333;
     text-align: justify;
@@ -143,6 +140,11 @@
     position: relative;
     width: 100%;
     height: 100%;
+    box-sizing: border-box;
+    padding: 24px;
+    background: #fff;
+    border-radius: 16px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
     transition: transform 0.6s;
     transform-style: preserve-3d;
   }
@@ -153,12 +155,21 @@
 
   .card-front, .card-back {
     position: absolute;
+    box-sizing: border-box;
     width: 100%;
     height: 100%;
+    padding: 0 10px;
+    display: flex;
+    left: 0;
+    top: 0;
+    flex-direction: column;
     backface-visibility: hidden;
   }
-
+  .card-front{
+    justify-content: center;
+  }
   .card-back {
+    overflow: auto;
     transform: rotateY(180deg);
   }
 
@@ -170,10 +181,16 @@
   }
 
   .answer-content {
-    font-size: 16px;
+    font-size: 18px;
+    font-weight: 500;
     line-height: 1.6;
     color: #333;
     text-align: justify;
+  }
+  .button-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
   }
 
   /* 复习时间选择 */
