prompts效果；aboutMe(done)； 积分控制及积分换算； 每季度换题；推广的群的维护

--- a/miniprogram/miniprogram/pages/detailBasic/detailBasic.wxss
+++ b/miniprogram/miniprogram/pages/detailBasic/detailBasic.wxss
@@ -217,7 +217,8 @@
   
   .ai-feedback-content {
     color: #4E5969;
-    font-size: 14px;
+    font-size: 16px;
+    font-weight: 500;
     line-height: 1.6;
     text-align: justify;
   }
