--- a/miniprogram/miniprogram/pages/detailBasic/detailBasic.wxss
+++ b/miniprogram/miniprogram/pages/detailBasic/detailBasic.wxss
@@ -9,12 +9,13 @@
   
   /* 头部样式 */
   .header {
+    width: 100%;
+    box-sizing: border-box;
     background: #fff;
     border-radius: 16px;
-    padding: 16px 24px;
+    padding: 16px 10px;
     margin-bottom: 16px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-    width: calc(100% - 48px);
   }
   
   .topic-title {
