advanced获取AI 增加积分控制 done

--- a/miniprogram/miniprogram/pages/detailAdvanced/detailAdvanced.wxml
+++ b/miniprogram/miniprogram/pages/detailAdvanced/detailAdvanced.wxml
@@ -77,11 +77,11 @@
       wx:if="{{answerAI.opening}}">
       {{answerAI.opening}}
     </text>
-    <text class="ai-feedback-content" 
+    <text class="ai-feedback-content" user-select="true"
       wx:if="{{answerAI.body}}">
       {{answerAI.body}}
     </text>
-    <text class="ai-feedback-content" 
+    <text class="ai-feedback-content" user-select="true" 
       wx:if="{{answerAI.closing}}">
       {{answerAI.closing}}
     </text>
