图片上传到cdn；其他小细节修改

--- a/miniprogram/miniprogram/pages/aboutMe/aboutMe.wxml
+++ b/miniprogram/miniprogram/pages/aboutMe/aboutMe.wxml
@@ -3,7 +3,7 @@
     <!-- 用户信息区域 -->
     <view class="user-section">
       <view class="user-info" bindtap="updateUserProfile">
-        <image class="avatar" src="{{userInfo.avatarUrl || '../../assets/pics/user8.jpeg'}}" mode="aspectFill"></image>
+        <image class="avatar" src="{{userInfo.avatarUrl || 'https://img.xiaoshuspeaking.site/user8.jpeg'}}" mode="aspectFill"></image>
         <view class="user-detail">
           <text class="nickname">{{userInfo.nickname}}</text>
           <view class="vip-badge1" wx:if="{{isVip}}">vip</view>
