--- a/miniprogram/miniprogram/pages/detailExpert/detailExpert.wxml
+++ b/miniprogram/miniprogram/pages/detailExpert/detailExpert.wxml
@@ -19,7 +19,7 @@
         <view class="question-title">{{item.qTitle}}</view>
         <view class="question-title-cn">{{item.qTitle_cn}}</view>
         <textarea class="answer-input" 
-          placeholder="Opinion + 1ST Eeample/Reason + 2ND Example/Reason + Conclusion (客观论证）"
+          placeholder=""
           value="{{ item.answerUser }}"
           data-index="{{index}}"
           maxlength="300"
